--- a/site/admin/comps/index.html
+++ b/site/admin/comps/index.html
@@ -24,7 +24,7 @@
       <a href="/admin/comps/" class="primary">Comps</a>
       <a href="/pricing.html">Member pricing</a>
       <a href="/for-gyms/pricing.html">Business pricing</a>
-      <a href="/login.html" title="Switch role">Role</a>
+      <a href="/auth/login.html" title="Switch role">Role</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
       </div>
