--- a/site/admin/index.html
+++ b/site/admin/index.html
@@ -20,7 +20,7 @@
       <a href="/workouts/" title="Public workout previews">Workouts</a>
       <a href="/pricing.html">Pricing</a>
       <a href="/for-gyms/">For Gyms</a>
-      <a href="/login.html" class="primary">Log in</a>
+      <a href="/auth/login.html" class="primary">Log in</a>
       <a href="/biz/" title="Staff/Admin only">Business</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
@@ -47,7 +47,7 @@
         <p class="small">Tenant: <span class="badge" data-admin-tenant>—</span></p>
         <div class="btn-row" style="margin-top:10px">
           <button class="btn" data-admin-clear-tenant>Clear tenant</button>
-          <a class="btn" href="/login.html">Switch role</a>
+          <a class="btn" href="/auth/login.html">Switch role</a>
         </div>
       </div>
     </div>
