--- a/site/biz/gym-timer/index.html
+++ b/site/biz/gym-timer/index.html
@@ -22,7 +22,7 @@
         <a href="/biz/gym-timer/" class="primary">Gym Timer</a>
         <a href="/biz/moves/">Move Library</a>
         <a href="/app/" title="Member side">Member</a>
-        <a href="/login.html" title="Switch role">Role</a>
+        <a href="/auth/login.html" title="Switch role">Role</a>
         <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
       </div>
