--- a/site/index.html
+++ b/site/index.html
@@ -26,7 +26,7 @@
             <a href="/pricing.html">Pricing</a>
       <a href="/for-gyms/">For Gyms</a>
 <a href="/join.html">Join</a>
-<a href="/login.html" class="primary">Log in</a>
+<a href="/auth/login.html" class="primary">Log in</a>
       <a href="/biz/" title="Staff/Admin only">Business</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
@@ -44,7 +44,7 @@
         <div class="btn-row">
           <a class="btn primary" href="/workouts/">Explore workout previews</a>
           <a class="btn" href="/join.html">Join</a>
-          <a class="btn" href="/login.html">Log in</a>
+          <a class="btn" href="/auth/login.html">Log in</a>
         </div>
         <div class="banner" style="margin-top:16px">
           <strong>Note</strong>
@@ -90,7 +90,7 @@
       <div class="pill">Business</div>
     </a>
 
-    <a class="card" href="/login.html">
+    <a class="card" href="/auth/login.html">
       <div class="thumb"><img src="/assets/branding/Hiit56 Online Primary Logo_For Dark Background.png" alt="Login" loading="lazy"></div>
       <div class="meta">
         <div class="title">Demo login</div>
