--- a/site/join.html
+++ b/site/join.html
@@ -22,7 +22,7 @@
       <a href="/pricing.html">Pricing</a>
       <a href="/for-gyms/">For Gyms</a>
       <a href="/join.html" title="Become a member" class="primary">Join</a>
-      <a href="/login.html">Log in</a>
+      <a href="/auth/login.html">Log in</a>
       <a href="/biz/" title="Staff/Admin only">Business</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
@@ -66,7 +66,7 @@
   <div class="btn-row" style="margin-top:14px">
     <button class="btn primary" data-join-submit>Continue</button>
     <a class="btn" href="/pricing.html">View pricing</a>
-    <a class="btn" href="/login.html">Demo role switcher</a>
+    <a class="btn" href="/auth/login.html">Demo role switcher</a>
   </div>
 </div>
 
