--- a/site/pricing.html
+++ b/site/pricing.html
@@ -21,7 +21,7 @@
       <a href="/pricing.html">Pricing</a>
       <a href="/for-gyms/">For Gyms</a>
       <a href="/join.html">Join</a>
-      <a href="/login.html" class="primary">Log in</a>
+      <a href="/auth/login.html" class="primary">Log in</a>
       <a href="/biz/" title="Staff/Admin only">Business</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
@@ -42,7 +42,7 @@
         <p class="small">Full on-demand access + member timer.</p>
         <div class="badge" style="margin:10px 0">$14.99 / month</div>
         <div class="btn-row">
-          <a class="btn primary" href="/login.html">Start (demo)</a>
+          <a class="btn primary" href="/auth/login.html">Start (demo)</a>
         </div>
         <p class="small" style="margin-top:10px">Trial: 7 days (planned)</p>
       </div>
@@ -53,7 +53,7 @@
         <p class="small">Best value. Same access, billed yearly.</p>
         <div class="badge" style="margin:10px 0">$149.99 / year</div>
         <div class="btn-row">
-          <a class="btn primary" href="/login.html">Start (demo)</a>
+          <a class="btn primary" href="/auth/login.html">Start (demo)</a>
         </div>
         <p class="small" style="margin-top:10px">Includes discount vs monthly</p>
       </div>
@@ -69,7 +69,7 @@
     <h2>Already a member?</h2>
   </div>
   <div class="btn-row">
-    <a class="btn primary" href="/login.html">Log in</a>
+    <a class="btn primary" href="/auth/login.html">Log in</a>
     <a class="btn" href="/workouts/">Browse previews</a>
   </div>
 
@@ -78,7 +78,7 @@
     Use the Join page to simulate checkout while we wire Stripe.
     <div class="btn-row" style="margin-top:10px">
       <a class="btn primary" href="/join.html">Join (demo)</a>
-      <a class="btn" href="/login.html">Demo login</a>
+      <a class="btn" href="/auth/login.html">Demo login</a>
     </div>
   </div>
 
