--- a/site/app/account/index.html
+++ b/site/app/account/index.html
@@ -23,7 +23,7 @@
       <a href="/app/account/" class="primary">Account</a>
       <a href="/workouts/" title="Conversion preview">Public preview</a>
       <a href="/biz/" title="Staff/Admin only">Business</a>
-      <a href="/login.html" title="Switch role">Role</a>
+      <a href="/auth/login.html" title="Switch role">Role</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
       </div>
