--- a/site/app/timer/index.html
+++ b/site/app/timer/index.html
@@ -22,7 +22,7 @@
       <a href="/app/timer/" class="primary">Timer</a>
       <a href="/workouts/" title="Public workout previews">Public preview</a>
       <a href="/biz/" title="Staff/Admin only">Business</a>
-      <a href="/login.html" title="Switch role">Role</a>
+      <a href="/auth/login.html" title="Switch role">Role</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
     </div>
