--- a/site/biz/index.html
+++ b/site/biz/index.html
@@ -24,7 +24,7 @@
         <a href="/biz/onboarding/">Onboarding</a>
         <a href="/biz/account/">Account</a>
         <a href="/app/" title="Member side">Member</a>
-        <a href="/login.html" title="Switch role">Role</a>
+        <a href="/auth/login.html" title="Switch role">Role</a>
         <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
       </div>
