--- a/site/biz/moves/index.html
+++ b/site/biz/moves/index.html
@@ -22,7 +22,7 @@
         <a href="/biz/gym-timer/">Gym Timer</a>
         <a href="/biz/moves/" class="primary">Move Library</a>
         <a href="/app/" title="Member side">Member</a>
-        <a href="/login.html" title="Switch role">Role</a>
+        <a href="/auth/login.html" title="Switch role">Role</a>
         <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
       </div>
@@ -39,7 +39,7 @@
     <strong>Business access required</strong>
     This page will be gated by real Staff/Admin login in a later checkpoint. For now, use the demo login to switch roles.
     <div class="btn-row" style="margin-top:10px">
-      <a class="btn primary" href="/login.html">Go to demo login</a>
+      <a class="btn primary" href="/auth/login.html">Go to demo login</a>
       <a class="btn" href="/">Back to site</a>
     </div>
   </div>
