--- a/site/for-gyms/index.html
+++ b/site/for-gyms/index.html
@@ -21,7 +21,7 @@
       <a href="/pricing.html">Pricing</a>
       <a href="/for-gyms/">For Gyms</a>
       <a href="/for-gyms/start.html">Start</a>
-      <a href="/login.html" class="primary">Log in</a>
+      <a href="/auth/login.html" class="primary">Log in</a>
       <a href="/biz/" title="Staff/Admin only">Business</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
@@ -39,7 +39,7 @@
         <div class="btn-row">
           <a class="btn primary" href="/for-gyms/pricing.html">View business pricing</a>
           <a class="btn primary" href="/for-gyms/start.html">Start (demo)</a>
-          <a class="btn" href="/login.html">Demo business login</a>
+          <a class="btn" href="/auth/login.html">Demo business login</a>
         </div>
       </div>
       <div class="hero-video">
