--- a/site/for-gyms/pricing.html
+++ b/site/for-gyms/pricing.html
@@ -21,7 +21,7 @@
       <a href="/pricing.html">Pricing</a>
       <a href="/for-gyms/">For Gyms</a>
       <a href="/for-gyms/start.html">Start</a>
-      <a href="/login.html" class="primary">Log in</a>
+      <a href="/auth/login.html" class="primary">Log in</a>
       <a href="/biz/" title="Staff/Admin only">Business</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
@@ -76,7 +76,7 @@
 
   <div class="btn-row" style="margin-top:14px">
     <a class="btn" href="/for-gyms/">Back</a>
-    <a class="btn primary" href="/login.html">Demo login</a>
+    <a class="btn primary" href="/auth/login.html">Demo login</a>
   </div>
 
   <div class="banner" style="margin-top:18px">
@@ -84,7 +84,7 @@
     Use Start to simulate tenant signup while Stripe/Supabase are wired.
     <div class="btn-row" style="margin-top:10px">
       <a class="btn primary" href="/for-gyms/start.html">Start (demo)</a>
-      <a class="btn" href="/login.html">Demo login</a>
+      <a class="btn" href="/auth/login.html">Demo login</a>
     </div>
   </div>
 
