--- a/site/for-gyms/start.html
+++ b/site/for-gyms/start.html
@@ -22,7 +22,7 @@
       <a href="/pricing.html">Pricing</a>
       <a href="/for-gyms/" class="primary">For Gyms</a>
       <a href="/join.html" title="Become a member">Join</a>
-      <a href="/login.html">Log in</a>
+      <a href="/auth/login.html">Log in</a>
       <a href="/biz/" title="Staff/Admin only">Business</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
