--- a/site/workouts/category.html
+++ b/site/workouts/category.html
@@ -22,7 +22,7 @@
       <a href="/workouts/" title="Public workout previews">Workouts</a>
             <a href="/pricing.html">Pricing</a>
       <a href="/for-gyms/">For Gyms</a>
-<a href="/login.html" class="primary">Log in</a>
+<a href="/auth/login.html" class="primary">Log in</a>
       <a href="/biz/" title="Staff/Admin only">Business</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
@@ -82,7 +82,7 @@
     <strong>Want full access?</strong>
     Join HIIT56 Online to unlock the entire on‑demand library and member features.
     <div class="btn-row" style="margin-top:10px">
-      <a class="btn primary" href="/login.html">Log in / Join</a>
+      <a class="btn primary" href="/auth/login.html">Log in / Join</a>
       <a class="btn" href="/workouts/">Back to categories</a>
     </div>
   </div>
