--- a/site/workouts/index.html
+++ b/site/workouts/index.html
@@ -22,7 +22,7 @@
       <a href="/workouts/" title="Public workout previews">Workouts</a>
             <a href="/pricing.html">Pricing</a>
       <a href="/for-gyms/">For Gyms</a>
-<a href="/login.html" class="primary">Log in</a>
+<a href="/auth/login.html" class="primary">Log in</a>
       <a href="/biz/" title="Staff/Admin only">Business</a>
       <span class="badge" data-role-pill>Guest</span>
       <span class="badge" data-tenant-pill style="display:none"></span>
